--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "consign": "^0.1.2",
-    "express": "^4.14.0",
     "dotenv": "^8.2.0",
+    "express": "^4.14.0",
     "express-basic-auth": "^1.2.0",
     "express-validator": "^2.20.8",
     "mysql": "^2.18.1",
     "restify": "^4.1.1",
     "soap": "^0.16.0",
     "swagger-jsdoc": "^4.0.0",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.4",
+    "winston": "^3.2.1"
   }
 }
