--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "author": "Levi Modesto",
   "license": "ISC",
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "body-parser": "^1.15.2",
     "consign": "^0.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.14.0",
     "express-basic-auth": "^1.2.0",
+    "express-request-id": "^1.4.1",
     "express-validator": "^2.20.8",
     "mysql": "^2.18.1",
     "restify": "^4.1.1",
