--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "gateway",
     "javascript"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lmodesto/relatorios_codiv.git"
+  },
   "author": "Levi Modesto",
   "license": "ISC",
   "dependencies": {
