--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ services:
     image: node:10.15.1
     ports: 
        - 80:3000
-    command: bash -c "npm install  && node ./server"
+    command: bash -c "npm install express:4.14.0 && app-root-path:3.0.0  && body-parser:1.15.2 && consign:0.1.2 && dotenv:8.2.0 && express:4.14.0 && express-basic-auth:1.2.0 && express-request-id:1.4.1&& express-validator:2.20.8 && mysql:2.18.1 && restify:4.1.1 && soap:0.16.0 && swagger-jsdoc:4.0.0 && swagger-ui-express:4.1.4 && winston:3.2.1 && node server"
     restart: always 
