--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ services:
     image: node:10.15.1
     ports: 
        - 80:3000
-    command: bash -c "npm install express:4.14.0 && npm install app-root-path:3.0.0  && npm install  body-parser:1.15.2 &&  npm install consign:0.1.2 && npm install  dotenv:8.2.0 && npm install  express:4.14.0 && npm install  express-basic-auth:1.2.0 && npm install  express-request-id:1.4.1 && npm install  express-validator:2.20.8 &&  npm install mysql:2.18.1 &&  npm install restify:4.1.1 && npm install  soap:0.16.0 &&  npm install swagger-jsdoc:4.0.0 &&  npm install swagger-ui-express:4.1.4 &&  npm install winston:3.2.1 && node server"
+    command: bash -c "npm install express && npm install app-root-path  && npm install  body-parser &&  npm install consign && npm install  dotenv && npm install  express	&& npm install  express-basic-auth && npm install  express-request-id && npm install  express-validator &&  npm install mysql &&  npm install restify && npm install  soap &&  npm install swagger-jsdoc &&  npm install swagger-ui-express &&  npm install winston && node server"
     restart: always 
