--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ services:
     image: node:10.15.1
     ports: 
        - 80:3000
-    command: bash -c "npm init && npm install  && node server"
+    command: bash -c "npm install  && node server"
     restart: always 
