--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '2'
 services: 
   nodejs:
     image: node:10.15.1
+    volumes:
+      - ./:/data
     ports: 
-       - 80:3000
-    command: bash -c "npm install express && npm install app-root-path && npm install body-parser && npm install consign && npm install dotenv && npm install express-basic-auth && npm install express-request-id && npm install express-validator && npm install mysql && npm install restify && npm install soap && npm install swagger-jsdoc && npm install swagger-ui-express && npm install winston && node server.js"
+       - 3000:3000
+    command: bash -c "npm install && npm start --cache /data/.npm"
